language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_prelude_value_to_original_name_remove_item_import.snap
---
source: language-server/src/tests/rename.rs
expression: "import gleam.{Nil as Null, type Nil as Wibble}\n\npub fn go() -> Wibble {\n  Null\n}"
---
----- BEFORE RENAME
-- app.gleam
import gleam.{Nil as Null, type Nil as Wibble}

pub fn go() -> Wibble {
  Null
  ↑▔▔▔
}


----- AFTER RENAME
-- app.gleam
import gleam.{type Nil as Wibble}

pub fn go() -> Wibble {
  Nil
}
