language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_prelude_value_with_other_module_imported.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport something\n\npub fn main() {\n  Ok(10)\n}\n"
---
----- BEFORE RENAME
-- something.gleam
pub type Something

-- app.gleam

import something

pub fn main() {
  Ok(10)
  ↑▔    
}


----- AFTER RENAME
-- something.gleam
pub type Something

-- app.gleam

import gleam.{Ok as Success}
import something

pub fn main() {
  Success(10)
}
