language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_prelude_value_with_other_prelude_value_imported.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport gleam.{Error}\n\npub fn main() {\n  Ok(Error(10))\n}\n"
---
----- BEFORE RENAME
-- app.gleam

import gleam.{Error}

pub fn main() {
  Ok(Error(10))
  ↑▔           
}


----- AFTER RENAME
-- app.gleam

import gleam.{Error, Ok as Success}

pub fn main() {
  Success(Error(10))
}
