language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_prelude_value_with_prelude_already_imported.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport gleam\n\npub fn main() {\n  Ok(gleam.Error(10))\n}\n"
---
----- BEFORE RENAME
-- app.gleam

import gleam

pub fn main() {
  Ok(gleam.Error(10))
  ↑▔                 
}


----- AFTER RENAME
-- app.gleam

import gleam.{Ok as Success}

pub fn main() {
  Success(gleam.Error(10))
}
