language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_record_constructor_in_constant.snap
---
source: language-server/src/tests/rename.rs
expression: "\ntype Wibble {\n  Wibble(wibble: Int)\n}\n\npub const zero = Wibble(0)\n"
---
----- BEFORE RENAME
-- app.gleam

type Wibble {
  Wibble(wibble: Int)
  ↑▔▔▔▔▔             
}

pub const zero = Wibble(0)


----- AFTER RENAME
-- app.gleam

type Wibble {
  Wobble(wibble: Int)
}

pub const zero = Wobble(0)
